part 3: updated GET endpoints
